# PDFTranslate-Team

./: .env.backend.example  .gitignore  BABELDOC_CONFIG.md  BACKEND.md  CHANGELOG.md  DEPLOYMENT_NOTES.md  Dockerfile.backend  MIGRATION_GUIDE.md  README.md  TODO.md  alembic.ini  docker-compose.yml  pixi.toml  pyproject.toml  requirements.txt
.factory/droids/: pixi-next15-coordinator.md
.github/workflows/: docker-publish.yml  frontend-ci.yml
Front/: Dockerfile  README.md  eslint.config.js  eslint.config.mjs  i18n.ts  middleware.ts  next.config.mjs  package-lock.json  package.json  server.js  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo
Front/app/: globals.css  layout.tsx  page.tsx  providers.tsx
Front/components/: logout-button.tsx
Front/messages/: en.json  zh.json
Front/scripts/: build.js  build.mjs
Front/types/: global.d.ts
alembic/: env.py
alembic/versions/: 001_full_initial.py  001_initial.py  002_add_system_settings.py  002_remove_user_provider_access.py  003_add_password_reset_tokens.py  003_optimize_indexes.py  004_add_email_verification_support.py  (+3 more)
app/: access.py  auth.py  config.py  database.py  dependencies.py  emailer.py  main.py  models.py  quota.py  redis_client.py  s3_client.py  schemas.py  settings_manager.py  tasks.py  websocket_manager.py
docs/: API_REFERENCE.md  DEPLOYMENT_GUIDE.md  FRONTEND_UX_IMPROVEMENTS.md  TROUBLESHOOTING_LOGIN.md  frontend-inspection-report.md  frontend-navigation-check.md
scripts/: diagnose_startup.py  fix_stalled_tasks.py  init_db.py  test_api_endpoints.py  test_e2e_flow.py  test_migration.py
(+106 files in other folders)
