[project]
name = "pdftranslate-backend"
version = "0.1.0"
description = "FastAPI backend for PDFTranslate Team portal"
authors = [{ name = "PDFTranslate Team" }]
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.111.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic-settings>=2.4.0"
]

[project.optional-dependencies]
dev = ["pytest>=8.2.0"]

[tool.uv]
package = true

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["app"]
